Doc/0.2/api_map_ru.md
![RimUI Framework](../../About/Preview.png)

**RimUI Framework** — ядро `0.8.21` · мод `0.2.1` · RimWorld `1.6`

---

# Карта API

[Оглавление](index_ru.md) | [English](api_map_en.md)

- Сетка
  - [Grid](01-grid/01_grid_ru.md)
    - Методы: `Cell(GridCell cell)`, `Cell(int colSpan, UiElement content)`, `Cell(int colSpan, int rowSpan, UiElement content)`, `int CellCount (свойство)`, `GridCell CellAt(int i)`, `RemoveCellAt(int i)`, `ClearCells()`
  - [GridCell](01-grid/02_gridcell_ru.md)
    - Методы: `GridCell(int colSpan = 12, int rowSpan = 1) (конструктор)`, `With(UiElement content)`, `SetContent(UiElement content)`
    - События: `OnDragStart`, `OnDragOut`, `OnDropIn`
  - [FlexBox](01-grid/03_flexbox_ru.md)
    - Методы: `FlexBox(Axis axis = Axis.Column) (конструктор)`, `Add(UiElement child, float grow = 0f)`, `RemoveChildAt(int i)`, `InsertChild(int i, UiElement el, float grow = 0f)`
    - События: `OnDragStart`, `OnDragOut`, `OnDropIn`
- Стили и спрайты
  - [Style — модель стиля](02-styles/01_style_ru.md)
    - Методы: `Clone()`, `static SnapUnit(float v)`, `SetExactSize(float w, float h)`, `HasVisualBackground (свойство)`, `HasVisualBorder (свойство)`
  - [SpriteFrame — спрайт-рамка и тайлинг](02-styles/02_spriteframe_ru.md)
    - Методы: `SpriteFrame() (конструктор)`, `SpriteFrame(string atlasKey) (конструктор)`, `SpriteFrame(string atlasKey, float corner) (конструктор)`, `SpriteFrame(string atlasKey, Thickness edge, Thickness reserve) (конструктор)`, `static SpriteFrame.Off (поле)`
- Темы
  - [Theme — темы и файл темы](03-themes/01_theme_ru.md)
    - Методы: `ThemeManager.LoadTheme(string name, string modRootDir, out string error)`, `Theme.Slot(string path)`, `Theme.RadiusPx(BorderRadius r)`, `Theme.BorderPx(BorderWidth w)`, `static Theme.BuildDefault()`
- Анимации
  - [Animations — реестр модулей](04-animations/01_animations_ru.md)
    - Методы: `static Register(string name, IUiAnimation anim)`, `static Get(string name)`, `static EaseOut(float k)`, `static EaseIn(float k)`, `static EaseInOut(float k)`
  - [Animated](04-animations/02_animated_ru.md)
    - Методы: `Animated(UiElement child = null) (конструктор)`, `Play(string name, float duration = 0.3f, bool loop = false, float param = 0f, float delay = 0f)`, `static Wrap(UiElement child, string name, float duration = 0.3f, bool loop = false, float param = 0f)`, `Restart()`
  - [StyleAnimation](04-animations/03_styleanimation_ru.md)
    - Методы: `static Install()`, `static Parse(string spec)`
- Формы
  - [Label](05-forms/01_label_ru.md)
    - Методы: `Label(string content = null) (конструктор)`, `SetStyle(string path, string value)`
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [Checkbox](05-forms/02_checkbox_ru.md)
    - Методы: `Checkbox(string label = null, Action<bool> onChange = null) (конструктор)`, `GetValue()`, `SetValue(bool v)`, `SetStyle(string path, string value)`
    - События: `OnChange`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [RadioButton](05-forms/03_radiobutton_ru.md)
    - Методы: `RadioButton(string label, object value, Action<object> onSelect = null) (конструктор)`, `SetStyle(string path, string value)`
    - События: `OnSelect`, `Events.SelectionChanged`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [ToggleSwitch](05-forms/04_toggleswitch_ru.md)
    - Методы: `ToggleSwitch(Action<bool> onChange = null, string label = null) (конструктор)`, `GetValue()`, `SetValue(bool v)`, `SetStyle(string path, string value)`
    - События: `OnChange`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [ToggleButton](05-forms/05_togglebutton_ru.md)
    - Методы: `ToggleButton(string onText, string offText = null, Action<bool> onChange = null) (конструктор)`, `GetValue()`, `SetValue(bool v)`, `SetStyle(string path, string value)`
    - События: `OnChange`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [Slider](05-forms/06_slider_ru.md)
    - Методы: `Slider(float min, float max, Action<float> onChange = null) (конструктор)`, `GetValue()`, `SetValue(float v)`, `GetValueHi()`, `SetValueHi(float v)`, `SetStyle(string path, string value)`
    - События: `OnChange`, `OnChangeHi`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [InputText](05-forms/07_inputtext_ru.md)
    - Методы: `InputText(Action<string> onChange = null) (конструктор)`, `GetValue()`, `SetValue(string v)`, `SetStyle(string path, string value)`
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [InputNumber](05-forms/08_inputnumber_ru.md)
    - Методы: `InputNumber(double min, double max, Action<double> onChange = null) (конструктор)`, `GetValue()`, `SetValue(double v)`, `SetStyle(string path, string value)`
    - События: `OnChangeNum`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [Textarea](05-forms/09_textarea_ru.md)
    - Методы: `Textarea(Action<string> onChange = null) (конструктор)`, `GetValue()`, `SetValue(string v)`, `SetStyle(string path, string value)`
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [Field](05-forms/10_field_ru.md)
    - Методы: `Field() (конструктор)`, `Field(Axis axis) (конструктор)`, `SetStyle(string path, string value)`
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [InputBase](05-forms/11_inputbase_ru.md)
    - Методы: `Focus(LayoutContext ctx)`, `StateOf(UiState s)`, `GetValue()`, `SetValue(string v)`, `SetStyle(string path, string value)`
    - События: `OnChange`, `OnCommit`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [Rating](05-forms/12_rating_ru.md)
    - Методы: `GetValue()`, `SetValue(float v)`
    - События: `OnChange`, `Events.SelectionChanged`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.DisabledChanged`
- Выбор
  - [Select&lt;T&gt;](06-selection/01_select_ru.md)
    - Методы: `Select() (конструктор)`, `Select(IEnumerable<T> values, Action<T> onChange = null) (конструктор)`, `Select(IEnumerable<SelectItem<T>> items, Action<T> onChange = null) (конструктор)`, `GetSelected()`, `SetSelected(T value)`, `SetStyle(string path, string value)`
    - События: `OnChange`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`, `Events.SelectionChanged`
  - [MultiSelect&lt;T&gt;](06-selection/02_multiselect_ru.md)
    - Методы: `MultiSelect() (конструктор)`, `MultiSelect(IEnumerable<SelectItem<T>> items, Action<ICollection<T>> onChange = null) (конструктор)`, `MultiSelect(IEnumerable<T> values, Action<ICollection<T>> onChange = null) (конструктор)`, `GetSelected()`, `SetStyle(string path, string value)`
    - События: `OnChange`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`, `Events.SelectionChanged`
  - [MultiTreeSelect](06-selection/03_multitreeselect_ru.md)
    - Методы: `GetSelected()`, `SetStyle(string path, string value)`
    - События: `OnChange`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`, `Events.SelectionChanged`
  - [SelectButton&lt;T&gt;](06-selection/04_selectbutton_ru.md)
    - Методы: `SelectButton() (конструктор)`, `SelectButton(IEnumerable<T> values, Action<T> onChange = null) (конструктор)`, `GetSelected()`, `SetSelected(T value)`, `SetStyle(string path, string value)`
    - События: `OnChange`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`, `Events.SelectionChanged`
  - [TreeSelect](06-selection/05_treeselect_ru.md)
    - Методы: `GetSelected()`, `SetSelected(TreeItem item)`, `SetStyle(string path, string value)`
    - События: `OnChange`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`, `Events.SelectionChanged`
  - [CascadeSelect](06-selection/06_cascadeselect_ru.md)
    - Методы: `CascadeSelect(Action<object> onChange = null) (конструктор)`, `GetSelected()`, `SetStyle(string path, string value)`
    - События: `OnChange`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`, `Events.SelectionChanged`
  - [ColorPicker](06-selection/07_colorpicker_ru.md)
    - Методы: `ColorPicker(Action<ColorRGBA> onChange = null) (конструктор)`, `GetValue()`, `SetValue(ColorRGBA v)`, `SetStyle(string path, string value)`
    - События: `OnChange`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`, `Events.SelectionChanged`
- Индикация
  - [Tag](07-indicators/01_tag_ru.md)
    - Методы: `Tag(string content = null, Severity severity = Severity.Info) (конструктор)`, `SetStyle(string path, string value)`
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [Chip](07-indicators/02_chip_ru.md)
    - Методы: `Chip(string content = null, Action onRemove = null) (конструктор)`, `SetStyle(string path, string value)`
    - События: `OnRemove`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [Badge](07-indicators/03_badge_ru.md)
    - Методы: `Badge(Func<string> value = null) (конструктор)`, `static Count(Func<int> count)`, `SetStyle(string path, string value)`
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [InlineMessage](07-indicators/04_inlinemessage_ru.md)
    - Методы: `InlineMessage(Severity severity, string content = null) (конструктор)`, `SetStyle(string path, string value)`
    - События: `OnClose`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [MeterGroup](07-indicators/05_metergroup_ru.md)
    - Методы: `MeterGroup() (конструктор)`, `MeterGroup(IEnumerable<MeterSegment> segments) (конструктор)`, `Add(float value, ColorRGBA color, string label = null)`, `SetStyle(string path, string value)`
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [ProgressBar](07-indicators/06_progressbar_ru.md)
    - Методы: `ProgressBar(Func<float> value = null) (конструктор)`, `GetValue()`, `SetStyle(string path, string value)`
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [ProgressSpinner](07-indicators/07_progressspinner_ru.md)
    - Методы: `SetStyle(string path, string value)`
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [CircularProgress](07-indicators/08_circularprogress_ru.md)
    - Методы: `CircularProgress(Func<float> value = null) (конструктор)`, `SetStyle(string path, string value)`
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [SegmentProgress](07-indicators/09_segmentprogress_ru.md)
    - Методы: `SegmentProgress(Func<float> value = null) (конструктор)`, `SetStyle(string path, string value)`
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [Divider](07-indicators/10_divider_ru.md)
    - Методы: `Divider(bool vertical = false, float thickness = 1f, ColorRGBA? color = null) (конструктор)`, `SetStyle(string path, string value)`
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
- Контейнеры
  - [Panel](08-containers/01_panel_ru.md)
    - Методы: `Panel(string title = null, UiElement body = null) (конструктор)`, `SetStyle(string path, string value)`
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [Accordion](08-containers/02_accordion_ru.md)
    - Методы: `Section(string title, UiElement body, bool startOpen = false)`, `SetStyle(string path, string value)`
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [Tabs](08-containers/03_tabs_ru.md)
    - Методы: `Tab(string title, UiElement body, bool disabled = false)`, `GetSelected()`, `SetSelected(int index)`, `SetStyle(string path, string value)`
    - События: `OnChange`, `Events.SelectionChanged`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [Stepper](08-containers/04_stepper_ru.md)
    - Методы: `GetActive()`, `SetActive(int index)`
    - События: `OnChange`, `OnFinish`, `Events.SelectionChanged`, `Events.HoverEnter / Events.HoverLeave`, `Events.Click / Events.RightClick`, `Events.DisabledChanged`
- Данные
  - [ListBox&lt;T&gt;](09-data/01_listbox_ru.md)
    - Методы: `GetSelected()`, `SetSelected(int index)`, `SetStyle(string path, string value)`
    - События: `OnSelect`, `OnActivate`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`, `Events.SelectionChanged`
  - [OrderList&lt;T&gt;](09-data/02_orderlist_ru.md)
    - Методы: `OrderList(Action<List<T>> onReorder = null) (конструктор)`, `SetStyle(string path, string value)`
    - События: `OnReorder`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [PickList&lt;T&gt;](09-data/03_picklist_ru.md)
    - Методы: `PickList(Action<List<T>, List<T>> onChange = null) (конструктор)`, `SetStyle(string path, string value)`
    - События: `OnChange`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [Tree](09-data/04_tree_ru.md)
    - Методы: `FocusSearch()`, `St(UiState s)`, `GetSelected()`, `SetStyle(string path, string value)`
    - События: `OnSelect`, `OnSelectKeyed`, `OnToggle`, `OnCheck`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`, `Events.SelectionChanged`
  - [DataTable](09-data/05_datatable_ru.md)
    - Методы: `DataTable(params TableColumn[] columns) (конструктор)`, `Bind<T>(IEnumerable<T> data, Func<T, UiElement[]> rowBuilder)`, `AddRow(params UiElement[] cells)`, `St(UiState s)`, `GetSelected()`, `SetStyle(string path, string value)`
    - События: `OnRowClick`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`, `Events.SelectionChanged`
  - [TreeTable](09-data/06_treetable_ru.md)
    - Методы: `TreeTable(params TableColumn[] columns) (конструктор)`, `St(UiState s)`, `GetSelected()`, `SetStyle(string path, string value)`
    - События: `OnSelect`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`, `Events.SelectionChanged`
  - [ScrollBox](09-data/07_scrollbox_ru.md)
    - Методы: `ScrollBox() (конструктор)`, `ScrollBox(UiElement child) (конструктор)`, `SetStyle(string path, string value)`
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [Paginator](09-data/08_paginator_ru.md)
    - Методы: `PageCount (свойство)`, `GetPage()`, `SetPage(int page)`
    - События: `OnChange`, `OnPageSizeChange`, `Events.SelectionChanged`, `Events.HoverEnter / Events.HoverLeave`, `Events.Click / Events.RightClick`, `Events.DisabledChanged`
  - [Timeline](09-data/09_timeline_ru.md)
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`
  - [OrganizationChart](09-data/10_organizationchart_ru.md)
    - Методы: `GetSelected()`, `GetSelectedKeys(ctx)`, `ClearSelection(ctx)`, `SetCollapsed(ctx, nodeKey, collapsed)`
    - События: `OnSelect`, `OnToggle`, `Events.SelectionChanged`, `Events.HoverEnter / Events.HoverLeave`, `Events.Click / Events.RightClick`, `Events.DisabledChanged`
- Оверлеи и меню
  - [Button](10-overlays/01_button_ru.md)
    - Методы: `Button() (конструктор)`, `static Make(string text, string leftIcon = null, string rightIcon = null)`, `SetStyle(string path, string value)`
    - События: `OnClick`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [Popover](10-overlays/02_popover_ru.md)
    - Методы: `SetStyle(string path, string value)`
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [DropdownMenu](10-overlays/03_dropdownmenu_ru.md)
    - Методы: `AddItem(MenuItem item)`, `OpenAt(UiState s, Vec2 pos)`, `SetStyle(string path, string value)`
    - События: `MenuItem.OnClick`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [Menu](10-overlays/04_menu_ru.md)
    - Методы: `AddItem(MenuItem item)`, `AddHeader(string text)`, `AddSeparator()`, `SetStyle(string path, string value)`
    - События: `MenuItem.OnClick`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [ContextMenu](10-overlays/05_contextmenu_ru.md)
    - Методы: `ContextMenu(UiElement target = null) (конструктор)`, `AddItem(MenuItem item)`, `SetStyle(string path, string value)`
    - События: `MenuItem.OnClick`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click`, `Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [TooltipBox](10-overlays/06_tooltipbox_ru.md)
    - Методы: `SetStyle(string path, string value)`
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [Icon](10-overlays/07_icon_ru.md)
    - Методы: `Icon(string iconKey) (конструктор)`, `SetStyle(string path, string value)`
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [Icons](10-overlays/08_icons_ru.md)
    - Методы: `static Get(int index, float size = 0f)`, `static Rect(int index)`, `static Configure(string atlasKey, int cell, int columns)`, `static ResetConfig()`
  - [Text](10-overlays/09_text_ru.md)
    - Методы: `Text(string content) (конструктор)`, `SetStyle(string path, string value)`
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [ConfirmPopup](10-overlays/10_confirmpopup_ru.md)
    - Методы: `Close()`
    - События: `OnAccept`, `OnReject`, `Events.HoverEnter / Events.HoverLeave`, `Events.Click / Events.RightClick`, `Events.DisabledChanged`
- Окна
  - [UiWindow](11-windows/01_uiwindow_ru.md)
    - Методы: `UiWindow(UiElement root, Theme theme = null) (конструктор)`, `Show()`, `InitialSize (override, свойство)`
  - [ModalWindow](11-windows/02_modalwindow_ru.md)
    - Методы: `ModalWindow(UiElement body = null, Theme theme = null) (конструктор)`, `InitialSize (override, свойство)`
    - События: `OnClose`
  - [MessageWindow](11-windows/03_messagewindow_ru.md)
    - Методы: `MessageWindow(string title, UiElement body, string buttonText = "ОК", Button button = null, Theme theme = null) (конструктор)`, `static OfText(string title, string text, string buttonText = "ОК", float width = 340f)`
  - [ConfirmWindow](11-windows/04_confirmwindow_ru.md)
    - Методы: `ConfirmWindow(string title, UiElement body, string acceptText = "Да", string declineText = "Отмена", Button accept = null, Button decline = null, Theme theme = null) (конструктор)`, `static OfText(string title, string text, Action onAccept, Action onDecline = null, float width = 340f)`
    - События: `OnAccept`, `OnDecline`
- Отображение
  - [ImageBox](12-display/01_imagebox_ru.md)
    - Методы: `ImageBox(string textureKey = null) (конструктор)`, `SetStyle(string path, string value)`
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [CustomDraw](12-display/02_customdraw_ru.md)
    - Методы: `SetStyle(string path, string value)`
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
  - [Gallery](12-display/03_gallery_ru.md)
    - Методы: `GetSelected()`, `SetSelected(int index)`, `SetStyle(string path, string value)`
    - События: `OnChange`, `Events.SelectionChanged`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
- Звук
  - [AudioPlayer](13-audio/01_audioplayer_ru.md)
    - Методы: `AudioPlayer() (конструктор)`, `LoadFolder(string absDir)`, `Load(IList<string> paths)`, `ListNames()`, `Play(int index)`, `Play()`, `Pause()`, `Next()`, `Prev()`, `Seek(float deltaSec)`, `Dispose()`
- Графики
  - [Chart — общая база графиков](14-charts/01_chart_ru.md)
    - Методы: `SeriesColor(int i)`, `LoadJson(string json, out string error)`, `static NiceMax(float max)`, `static Fmt(float v)`, `SetStyle(string path, string value)`
    - События: `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`
- NodeCanvas
  - [NodeCanvas](15-nodecanvas/01_nodecanvas_ru.md)
    - Методы: `AddNode(CanvasNode node)`, `AddNode(string title, Vec2 pos, string type = null, string group = null)`, `RemoveNode(string id) / RemoveNode(CanvasNode node)`, `AddLink(string type, string from, string to, bool respectRules = true)`, `RemoveLink(string type, string from, string to) / RemoveLink(CanvasLink link)`, `Clear()`, `Serialize()`, `Deserialize(string json, out string error)`, `SetStyle(string path, string value)`
    - События: `Changed`, `OnConfigure`, `ConfirmDelete`, `Events.HoverEnter / Events.HoverLeave`, `Events.Hover`, `Events.Click / Events.RightClick`, `Events.Scroll`, `Events.DisabledChanged`

## Поддержать автора
Если тебе нравится RimUI Framework, можешь поддержать разработку:

[DonationAlerts](https://www.donationalerts.com/r/klimprog)
[Boosty](https://boosty.to/klimprog/donate)

**USDT (TRC20):** `TA4zq9F4TTrSQXjEESMBk8juQMGNLXX4B5`

Спасибо! ❤️
